--- a/BuildingLeaseUI/App.config
+++ b/BuildingLeaseUI/App.config
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System">
-      <section name="DevExpress.LookAndFeel.Design.AppSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+      <section name="DevExpress.LookAndFeel.Design.AppSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
   </configSections>
   <applicationSettings>
@@ -49,34 +49,46 @@
         </value>
       </setting>
       <setting name="CustomPaletteCollection" serializeAs="Xml">
-        <value/>
+        <value />
       </setting>
     </DevExpress.LookAndFeel.Design.AppSettings>
   </applicationSettings>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8.1"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8.1" />
     <!-- .NETFramework 4.8 이상 설치되어 있어야 함. 없는 경우 설치하라고 메시지가 표시 -->
   </startup>
   <appSettings>
-    <add key="DatabasePassword" value=""/>
-    <add key="DatabaseBackupDirectory" value="D:\BACKUP"/>
-    <add key="WriteLogFlag" value="0"/>
-    <add key="SkinName" value="Default"/>
-    <add key="ClientSettingsProvider.ServiceUri" value=""/>
+    <add key="DatabasePassword" value="" />
+    <add key="DatabaseBackupDirectory" value="D:\BACKUP" />
+    <add key="WriteLogFlag" value="0" />
+    <add key="SkinName" value="Default" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <connectionStrings>
-    <add name="Default" connectionString="Persist Security Info=True;Data Source=.\SQLEXPRESS;Initial Catalog=BuildingLease;User ID=sa;Password={0};Connection Timeout=30;" providerName="System.Data.SqlClient"/>
+    <add name="Default" connectionString="Persist Security Info=True;Data Source=.\SQLEXPRESS;Initial Catalog=BuildingLease;User ID=sa;Password={0};Connection Timeout=30;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
       <providers>
-        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri=""/>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
       </providers>
     </membership>
     <roleManager defaultProvider="ClientRoleProvider" enabled="true">
       <providers>
-        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400"/>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
       </providers>
     </roleManager>
   </system.web>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Threading.Tasks.Extensions" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.4.0" newVersion="4.2.4.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Bcl.AsyncInterfaces" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.9" newVersion="9.0.0.9" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
